[package]
name = "libsecp256k1"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
libsecp256k1-core = { version = "0.1.0", path = "core", default-features = false }
arrayref = "0.3.7"
rand = { version = "0.8.5", default-features = false }
digest = "0.10.7"
hmac-drbg = { version = "0.3.0", optional = true }
sha2 = { version = "0.10.7", optional = true, default-features = false }
typenum = { version = "1.16.0", optional = true }
serde = { version = "1.0.166", features = ["derive"], default-features = false }
lazy_static = { version = "1.4.0", optional = true }
base64 = { version = "0.21.2", default-features = false }

[features]
default = ["std", "hmac", "static-context"]
std = ["libsecp256k1-core/std", "sha2/std", "rand/std", "serde/std", "base64/std"]
hmac = ["hmac-drbg", "sha2", "typenum"]
static-context = []
lazy-static-context = ["static-context", "lazy_static", "std"]
