[package]
name = "elliptic-curves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
finite-fields = { path = "../finite-fields" }
num-bigint = "0.4.3"
num-traits = "0.2.16"
sha2 = "0.10.1"
hex = "0.4.3"
